Leo/GetXmlFile/GetXmlFile_v1_1Parser.java
// Generated from GetXmlFile_v1_1.g4 by ANTLR 4.4

package Leo.GetXmlFile;

import java.util.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GetXmlFile_v1_1Parser extends Parser {
	static { RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__8=1, T__7=2, T__6=3, T__5=4, T__4=5, T__3=6, T__2=7, T__1=8, T__0=9, 
		IntegerLiteral=10, FloatingPointLiteral=11, StringCharacters=12, LB=13, 
		RB=14, LT=15, RT=16, AMP=17, APOS=18, QUOT=19, Identifier=20, Identifier_L=21, 
		Identifier_C=22, WS=23, COMMENT_CORRECT=24, COMMENT_OTHER_A_LINE=25, COMMENT_OTHER_MULTI_LINE=26;
	public static final String[] tokenNames = {
		"<INVALID>", "'</'", "'\"'", "'''", "':'", "';'", "'/>'", "'<'", "'='", 
		"'>'", "IntegerLiteral", "FloatingPointLiteral", "StringCharacters", "LB", 
		"RB", "'&lt'", "'&rt'", "AMP", "APOS", "'&quot'", "Identifier", "Identifier_L", 
		"Identifier_C", "WS", "COMMENT_CORRECT", "COMMENT_OTHER_A_LINE", "COMMENT_OTHER_MULTI_LINE"
	};
	public static final int
		RULE_comment_correct = 0, RULE_comment_other_a_line = 1, RULE_comment_other_multi_line = 2, 
		RULE_node = 3, RULE_pri_node_begin = 4, RULE_abb_node_begin = 5, RULE_abb2_node_begin = 6, 
		RULE_pri_node_end = 7, RULE_abb_node_end = 8, RULE_abb2_node_end = 9, 
		RULE_pri_node_property = 10, RULE_abb_node_property = 11, RULE_pri_node_value = 12, 
		RULE_abb_node_value = 13;
	public static final String[] ruleNames = {
		"comment_correct", "comment_other_a_line", "comment_other_multi_line", 
		"node", "pri_node_begin", "abb_node_begin", "abb2_node_begin", "pri_node_end", 
		"abb_node_end", "abb2_node_end", "pri_node_property", "abb_node_property", 
		"pri_node_value", "abb_node_value"
	};

	@Override
	public String getGrammarFileName() { return "GetXmlFile_v1_1.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	public static Map<Integer, String> node_name = new HashMap<Integer, String>();				//<�ڵ���i_n,�ڵ���xxx.getText()>
	public static Map<Integer, String> node_value = new HashMap<Integer, String>();				//<�ڵ���i_n,�ڵ�ֵxxx.getText()>
	public static Map<Integer, Integer> node_depth = new HashMap<Integer, Integer>();			//<�ڵ���i_n,�ڵ����i_d>
	public static Map<Integer, Integer> node_property_first = new HashMap<Integer, Integer>();	//<�ڵ���i_n,��һ�����Ա��i_p>
	public static Map<Integer, Integer> node_property_final = new HashMap<Integer, Integer>();	//<�ڵ���i_n,���һ�����Ա��i_p>
	public static Map<Integer, String> property_name = new HashMap<Integer, String>();			//<���Ա��i_n,������xxx.getText()>
	public static Map<Integer, String> property_value = new HashMap<Integer, String>();			//<���Ա��i_n,����ֵxxx.getText()>
	public static Map<Integer, String> comment = new HashMap<Integer, String>();				//<ע�ͱ��i_n,ע������xxx.getText()>

	public static int i_n = 1;		//���ƽڵ��ż���
	public static int i_p = 1;		//�������Ա�ż���
	public static int i_c = 1;		//����ע�ͱ�ż���
	public static int i_d = 1;		//���ƽڵ���ȼ���

	public GetXmlFile_v1_1Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class Comment_correctContext extends ParserRuleContext {
		public Token COMMENT_CORRECT;
		public TerminalNode COMMENT_CORRECT() { return getToken(GetXmlFile_v1_1Parser.COMMENT_CORRECT, 0); }
		public Comment_correctContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comment_correct; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GetXmlFile_v1_1Listener ) ((GetXmlFile_v1_1Listener)listener).enterComment_correct(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GetXmlFile_v1_1Listener ) ((GetXmlFile_v1_1Listener)listener).exitComment_correct(this);
		}
	}

	public final Comment_correctContext comment_correct() throws RecognitionException {
		Comment_correctContext _localctx = new Comment_correctContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_comment_correct);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(28); ((Comment_correctContext)_localctx).COMMENT_CORRECT = match(COMMENT_CORRECT);
			comment.put(i_c++, ((Comment_correctContext)_localctx).COMMENT_CORRECT.getText());
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Comment_other_a_lineContext extends ParserRuleContext {
		public Token COMMENT_OTHER_A_LINE;
		public TerminalNode COMMENT_OTHER_A_LINE() { return getToken(GetXmlFile_v1_1Parser.COMMENT_OTHER_A_LINE, 0); }
		public Comment_other_a_lineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comment_other_a_line; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GetXmlFile_v1_1Listener ) ((GetXmlFile_v1_1Listener)listener).enterComment_other_a_line(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GetXmlFile_v1_1Listener ) ((GetXmlFile_v1_1Listener)listener).exitComment_other_a_line(this);
		}
	}

	public final Comment_other_a_lineContext comment_other_a_line() throws RecognitionException {
		Comment_other_a_lineContext _localctx = new Comment_other_a_lineContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_comment_other_a_line);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(31); ((Comment_other_a_lineContext)_localctx).COMMENT_OTHER_A_LINE = match(COMMENT_OTHER_A_LINE);
			comment.put(i_c++, ((Comment_other_a_lineContext)_localctx).COMMENT_OTHER_A_LINE.getText());
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Comment_other_multi_lineContext extends ParserRuleContext {
		public Token COMMENT_OTHER_MULTI_LINE;
		public TerminalNode COMMENT_OTHER_MULTI_LINE() { return getToken(GetXmlFile_v1_1Parser.COMMENT_OTHER_MULTI_LINE, 0); }
		public Comment_other_multi_lineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comment_other_multi_line; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GetXmlFile_v1_1Listener ) ((GetXmlFile_v1_1Listener)listener).enterComment_other_multi_line(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GetXmlFile_v1_1Listener ) ((GetXmlFile_v1_1Listener)listener).exitComment_other_multi_line(this);
		}
	}

	public final Comment_other_multi_lineContext comment_other_multi_line() throws RecognitionException {
		Comment_other_multi_lineContext _localctx = new Comment_other_multi_lineContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_comment_other_multi_line);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(34); ((Comment_other_multi_lineContext)_localctx).COMMENT_OTHER_MULTI_LINE = match(COMMENT_OTHER_MULTI_LINE);
			comment.put(i_c++, ((Comment_other_multi_lineContext)_localctx).COMMENT_OTHER_MULTI_LINE.getText());
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NodeContext extends ParserRuleContext {
		public Abb_node_valueContext abb_node_value() {
			return getRuleContext(Abb_node_valueContext.class,0);
		}
		public Abb2_node_endContext abb2_node_end() {
			return getRuleContext(Abb2_node_endContext.class,0);
		}
		public Pri_node_beginContext pri_node_begin() {
			return getRuleContext(Pri_node_beginContext.class,0);
		}
		public Abb_node_beginContext abb_node_begin() {
			return getRuleContext(Abb_node_beginContext.class,0);
		}
		public Abb2_node_beginContext abb2_node_begin() {
			return getRuleContext(Abb2_node_beginContext.class,0);
		}
		public Pri_node_endContext pri_node_end() {
			return getRuleContext(Pri_node_endContext.class,0);
		}
		public Abb_node_endContext abb_node_end() {
			return getRuleContext(Abb_node_endContext.class,0);
		}
		public NodeContext node(int i) {
			return getRuleContext(NodeContext.class,i);
		}
		public Pri_node_valueContext pri_node_value() {
			return getRuleContext(Pri_node_valueContext.class,0);
		}
		public List<NodeContext> node() {
			return getRuleContexts(NodeContext.class);
		}
		public NodeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_node; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GetXmlFile_v1_1Listener ) ((GetXmlFile_v1_1Listener)listener).enterNode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GetXmlFile_v1_1Listener ) ((GetXmlFile_v1_1Listener)listener).exitNode(this);
		}
	}

	public final NodeContext node() throws RecognitionException {
		NodeContext _localctx = new NodeContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_node);
		int _la;
		try {
			setState(67);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(40);
				switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
				case 1:
					{
					setState(37); pri_node_begin();
					}
					break;
				case 2:
					{
					setState(38); abb_node_begin();
					}
					break;
				case 3:
					{
					setState(39); abb2_node_begin();
					}
					break;
				}
				setState(44);
				switch (_input.LA(1)) {
				case T__7:
				case T__6:
				case IntegerLiteral:
				case FloatingPointLiteral:
				case StringCharacters:
					{
					setState(42); pri_node_value();
					}
					break;
				case T__1:
					{
					setState(43); abb_node_value();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(49);
				switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
				case 1:
					{
					setState(46); pri_node_end();
					}
					break;
				case 2:
					{
					setState(47); abb_node_end();
					}
					break;
				case 3:
					{
					setState(48); abb2_node_end();
					}
					break;
				}
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(54);
				switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
				case 1:
					{
					setState(51); pri_node_begin();
					}
					break;
				case 2:
					{
					setState(52); abb_node_begin();
					}
					break;
				case 3:
					{
					setState(53); abb2_node_begin();
					}
					break;
				}
				setState(59);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__2 || _la==Identifier) {
					{
					{
					setState(56); node();
					}
					}
					setState(61);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(65);
				switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
				case 1:
					{
					setState(62); pri_node_end();
					}
					break;
				case 2:
					{
					setState(63); abb_node_end();
					}
					break;
				case 3:
					{
					setState(64); abb2_node_end();
					}
					break;
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Pri_node_beginContext extends ParserRuleContext {
		public Token Identifier;
		public TerminalNode Identifier() { return getToken(GetXmlFile_v1_1Parser.Identifier, 0); }
		public Pri_node_propertyContext pri_node_property(int i) {
			return getRuleContext(Pri_node_propertyContext.class,i);
		}
		public List<Pri_node_propertyContext> pri_node_property() {
			return getRuleContexts(Pri_node_propertyContext.class);
		}
		public Pri_node_beginContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pri_node_begin; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GetXmlFile_v1_1Listener ) ((GetXmlFile_v1_1Listener)listener).enterPri_node_begin(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GetXmlFile_v1_1Listener ) ((GetXmlFile_v1_1Listener)listener).exitPri_node_begin(this);
		}
	}

	public final Pri_node_beginContext pri_node_begin() throws RecognitionException {
		Pri_node_beginContext _localctx = new Pri_node_beginContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_pri_node_begin);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(69); match(T__2);
			setState(70); ((Pri_node_beginContext)_localctx).Identifier = match(Identifier);
			node_name.put(i_n, ((Pri_node_beginContext)_localctx).Identifier.getText());
			node_depth.put(i_n, i_d++);
			node_property_first.put(i_n, i_p);
			setState(77);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Identifier) {
				{
				{
				setState(74); pri_node_property();
				}
				}
				setState(79);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(80); match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Abb_node_beginContext extends ParserRuleContext {
		public Token Identifier;
		public Abb_node_propertyContext abb_node_property(int i) {
			return getRuleContext(Abb_node_propertyContext.class,i);
		}
		public TerminalNode Identifier() { return getToken(GetXmlFile_v1_1Parser.Identifier, 0); }
		public List<Abb_node_propertyContext> abb_node_property() {
			return getRuleContexts(Abb_node_propertyContext.class);
		}
		public TerminalNode RB() { return getToken(GetXmlFile_v1_1Parser.RB, 0); }
		public TerminalNode LB() { return getToken(GetXmlFile_v1_1Parser.LB, 0); }
		public Abb_node_beginContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_abb_node_begin; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GetXmlFile_v1_1Listener ) ((GetXmlFile_v1_1Listener)listener).enterAbb_node_begin(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GetXmlFile_v1_1Listener ) ((GetXmlFile_v1_1Listener)listener).exitAbb_node_begin(this);
		}
	}

	public final Abb_node_beginContext abb_node_begin() throws RecognitionException {
		Abb_node_beginContext _localctx = new Abb_node_beginContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_abb_node_begin);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82); match(T__2);
			setState(83); ((Abb_node_beginContext)_localctx).Identifier = match(Identifier);
			node_name.put(i_n, ((Abb_node_beginContext)_localctx).Identifier.getText());
			node_depth.put(i_n, i_d++);
			node_property_first.put(i_n, i_p);
			setState(95);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				{
				setState(87); match(LB);
				setState(89); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(88); abb_node_property();
					}
					}
					setState(91); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==Identifier );
				setState(93); match(RB);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Abb2_node_beginContext extends ParserRuleContext {
		public Token Identifier;
		public Abb_node_propertyContext abb_node_property(int i) {
			return getRuleContext(Abb_node_propertyContext.class,i);
		}
		public TerminalNode Identifier() { return getToken(GetXmlFile_v1_1Parser.Identifier, 0); }
		public TerminalNode RB(int i) {
			return getToken(GetXmlFile_v1_1Parser.RB, i);
		}
		public List<Abb_node_propertyContext> abb_node_property() {
			return getRuleContexts(Abb_node_propertyContext.class);
		}
		public TerminalNode LB(int i) {
			return getToken(GetXmlFile_v1_1Parser.LB, i);
		}
		public List<TerminalNode> RB() { return getTokens(GetXmlFile_v1_1Parser.RB); }
		public List<TerminalNode> LB() { return getTokens(GetXmlFile_v1_1Parser.LB); }
		public Abb2_node_beginContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_abb2_node_begin; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GetXmlFile_v1_1Listener ) ((GetXmlFile_v1_1Listener)listener).enterAbb2_node_begin(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GetXmlFile_v1_1Listener ) ((GetXmlFile_v1_1Listener)listener).exitAbb2_node_begin(this);
		}
	}
